--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,14 @@
 ::-webkit-scrollbar {
   display: none;
 }
+
+@keyframes fadeInScale {
+  0% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
