--- a/client/src/index.css
+++ b/client/src/index.css
@@ -91,3 +91,19 @@ body {
   color: transparent;
   paint-order: stroke fill;
 }
+
+@keyframes appear{
+  from{
+    opacity: 0;
+    scale: 0.5;
+  }to{
+    opacity: 1;
+    scale: 1;
+  }
+}
+
+.dashboard-img-block{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
